# docker-v8

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  Dockerfile  LICENSE.md  Makefile  README.md  build.sh  install-package.sh  package.json  pylint.cfg  pyproject.toml  requirements.py  requirements.txt  tox.ini
.configs/: .pre-commit-config-server.yaml
.github/workflows/: buid-docker.yaml  build-docker.yaml  codeql.yml  coverage.yaml  push-docker.yaml  release.yaml  tox.yaml
docker_entrypoint/: entrypoint.py  entrypoint.sh
docker_entrypoint/_libs/: DockerEnvironments.py  ExitCodes.py  Logger.py  cli_parser.py  commands.py  docker_environments.py  utility.py
docker_entrypoint/_libs/ResultDetails/: FailResult.py
docker_entrypoint/src/: entrypoint.py
docker_entrypoint/src/_libs/: commands.py  utility.py
docs/: CONTRIBUTING.md
examples/: say-hello.js
tests/: _helpers.py  test_entrypoint.py
tests/test_ResultDetails/: test_FailResult.py
tests/test_lib/: test_Logger.py  test_cli_parser.py  test_commands.py  test_utility.py
tests/test_lib/test_ResultDetails/: test_FailResult.py
