# https://python-poetry.org/docs/pyproject/
[tool.poetry]
name = "entrypoint"
version = "0.0.0"
description = "The v8 docker entrypoint"
authors = ["Hamid Molareza <HamidMolareza@gmail.com>"]
license = "GPLV3"
readme = "README.md"
repository = "https://github.com/HamidMolareza/v8-docker"
packages = [{ include = "docker_entrypoint" }]

[tool.poetry.dependencies]
python = "^3.8"
on-rails = "4.1.0"
pylity = ">=0.0.6"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.0"
pytest = "^7.2.2"
pylint = "^2.17.0"
isort = "^5.12.0"
coverage = "^7.2.2"
tox = "^4.4.7"
tox-gh-actions = "^3.1.0"

[tool.poetry.scripts]
entrypoint = "docker_entrypoint.entrypoint:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
